--- a/etc/gunicorn.conf
+++ b/etc/gunicorn.conf
@@ -1,13 +1,11 @@
 CONFIG = {
-    'mode': 'wsgi',
-    'working_dir': '/home/box/web',
-    'python': '/usr/bin/python',
-    'args': (
-        '--bind=127.0.0.1:8080',
-        '--workers=7',
-        '--timeout=60',
-        '--user=www-data',
-        '--group=www-data',
-        'hello:wsgi_app',
-    ),
-}
+	'mode':'wsgi',
+	'working_dir':'/home/box/web/',
+	'python':'/usr/bin/python',
+	'args':(
+		'--bind=0.0.0.0:8080',
+		'--workers=16',
+		'--timeout=60',
+		'hello:application'
+		)
+	}
